manifests/ops/headlamp/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: ops
  labels:
    app: headlamp
spec:
  selector:
    app: headlamp
  ports:
    - name: http
      port: 80
      targetPort: 4466
